<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/spec_black"
    android:padding="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-100dp"
        android:orientation="vertical"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_minute_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="top"
            android:includeFontPadding="false"
            android:lineHeight="0dp"
            android:text="@string/_20"
            android:textColor="@color/timer_text_dark_mode_red_color"
            android:textSize="200sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tv_timerSecs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="top"
            android:includeFontPadding="false"
            android:lineHeight="0dp"
            android:text="@string/_00"
            android:textColor="@color/timer_text_dark_mode_red_color"
            android:textSize="200sp"
            android:typeface="sans" />

        <LinearLayout
            android:id="@+id/llButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_pause_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background"
                android:fontFamily="@font/roboto_blackk"
                android:scaleType="center"
                android:text="@string/start"
                android:textSize="24sp" />

            <Button
                android:id="@+id/skip_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="50dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background"
                android:fontFamily="@font/roboto_blackk"
                android:text="@string/skip"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/llCurrentTaskContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/llNavbar"
        app:layout_constraintTop_toBottomOf="@id/ll_main_container">

        <TextView
            android:id="@+id/tvTaskDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="start"
            android:hint="Current task"
            android:maxLength="36"
            android:textColor="@color/spec_black_80per"
            android:textColorHint="@color/spec_black_80per" />

        <LinearLayout
            android:id="@+id/llPomoCountContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCompPomos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/spec_black_80per"
                tools:text="0/" />

            <TextView
                android:id="@+id/tvTotalPomo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/spec_black_80per"
                tools:text="5" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivTimer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo0"
            android:src="@drawable/ic_timer_24" />

        <ImageView
            android:id="@+id/ivTaskList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_task_list_24dp" />

        <ImageView
            android:id="@+id/ivAnalytics"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo00"
            android:src="@drawable/ic_baseline_insert_chart_24"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ivSettings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo000"
            android:src="@drawable/ic_baseline_settings_24" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>